# oxideav-gif

./: CHANGELOG.md  Cargo.toml  README.md
src/: container.rs  decoder.rs  encoder.rs  lib.rs  lzw.rs
tests/: animated_gif.rs  disposal_and_transparency.rs  probe.rs  static_gif_roundtrip.rs
