[package]
name = "oxideav-gif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust GIF codec + container (87a/89a decoder + encoder, animation, LZW)"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "image", "gif", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-pixfmt = { workspace = true }
