[package]
name = "oxideav-gif"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust GIF codec + container (87a/89a decoder + encoder, animation, LZW)"
repository = "https://github.com/OxideAV/oxideav-gif"
homepage = "https://github.com/OxideAV/oxideav-gif"
readme = "README.md"
keywords = ["multimedia", "image", "gif", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-pixfmt = "0.1"
